Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138759

[VxWorks] some vxworks socket errorhandling is missing from 6.x

XMLWordPrintable

    • VxWorks

      Qt 5.15 for VxWorks, had special error handling for VxWorks, which is missing from the 6.x series.

      Attached is the diff.

      qtbase-socket-vx-6.8-5.15.diff

        For Gerrit Dashboard: QTBUG-138759
        # Subject Branch Project Status CR V

            karimpinter Karim Pinter
            karimpinter Karim Pinter
            Veli-Pekka Heinonen Veli-Pekka Heinonen
            Jarno Lämsä Jarno Lämsä
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:

                There is 1 open Gerrit change