QNativeSocketEngine/VxWorks: also handle ENOTSUP

VxWorks doesn't return standard error types, so there is a need to
extend the error handling for this OS.

Task-number: QTBUG-138759
Pick-to: 6.8
Change-Id: I01de0f759c732ae840711949c769a4710aad306f
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
(cherry picked from commit 5c7b5d151894c39af07234563edd101da33bafde)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>